CUB-24: Fix map & serverid tracker